--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,24 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>React MVC Test</title>
+    <style>
+      * {
+        font-family: "Open Sans", sans-serif;
+        box-sizing: border-box;
+      }
+
+      html,
+      body,
+      #root {
+        background: #ecf0f1;
+        color: #2d3436;
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
